--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.3.8",
     "redux-devtools-extension": "^2.13.5",
+    "resolve-url-loader": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style": "0.0.3",
     "style-loader": "^0.23.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.1.0-dev.20180915",
+    "utils": "^0.3.1",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
