--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
+    "@types/history": "^4.7.0",
+    "@types/react": "^16.4.14",
     "@webpack-cli/init": "^0.1.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.2",
