--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-typescript": "^7.0.0",
     "@types/history": "^4.7.0",
     "@types/react": "^16.4.14",
+    "@types/react-redux": "^6.0.9",
     "@webpack-cli/init": "^0.1.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.2",
