--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildJ": "cp -r public/* dist & webpack -d",
-    "build": "rm -r dist/* & webpack --mode production",
+    "build": "rm -r dist/* & cp -r public/* dist & webpack --mode production",
     "start": "webpack-dev-server --hot"
   },
   "author": "",
