--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/history": "^4.7.0",
     "@types/react": "^16.4.14",
     "@types/react-redux": "^6.0.9",
@@ -31,15 +31,15 @@
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.3.8",
+    "react-hot-loader": "^4.3.11",
     "redux-devtools-extension": "^2.13.5",
     "resolve-url-loader": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style": "0.0.3",
     "style-loader": "^0.23.0",
-    "typescript": "^3.1.0-dev.20180915",
+    "typescript": "^3.1.0-rc.20180911",
     "utils": "^0.3.1",
-    "webpack": "^4.19.0",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   },
@@ -47,8 +47,8 @@
     "connected-react-router": "^4.4.1",
     "history": "^4.7.2",
     "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
