--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
     "@types/react": "^16.4.14",
     "@types/react-redux": "^6.0.9",
     "@webpack-cli/init": "^0.1.0",
-    "babel": "^6.23.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
@@ -54,7 +51,6 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "remove": "^0.1.5"
+    "redux-thunk": "^2.3.0"
   }
 }
